polish and mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     name='description'>
   <link rel="stylesheet" media="all" href="css/main.css"
     data-turbolinks-track="true" />
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script src="javascript/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -50,27 +53,53 @@
       <div class='col-md-8'>
         <div class='row content'>
           <h2><a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSedUgj9dYVGusAUoDFDiO98hYqQtb0aoJBDEIVxN-CJwwjPLg/viewform?usp=sf_link">Please
-              pre-register here for the June 12th event</a></h2>
+              href="https://docs.google.com/forms/d/e/1FAIpQLSfmoichiSWcjxgb8nvnla-PB8710iRevma0kXQO-G_LtBWpNA/viewform?usp=sf_link">Please
+              pre-register here for the January 14-15th masters</a></h2>
         </div>
         <div class='row content'>
           <div class='col-md-4'>
             <img class="img-responsive"
-              src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1654221858/jw2ut7sstijncqredmjh.png"
-              alt="Jw2ut7sstijncqredmjh" />
+              src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1635171124/aq4b52parwugpj68asl2.png"
+              alt="Bowler of the Year" />
           </div>
           <div class='col-md-8'>
             <div class='vcenter-container'>
               <div class='vcenter-child'>
                 <h2>
                   Congratulations to
-                  <strong>Justin Hart!</strong>
+                  <strong>Jon Sample!</strong>
                   <br>
                 </h2>
                 <h3>
-                  Winner of the May 14th
+                  The 2021-22 Bay State Open
                   <br>
-                  Bay State Open all-in-one Team event!
+                  Bowler of the Year!
+                  <br>
+                  Great bowling Jon!
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class='row content'>
+          <div class='col-md-4'>
+            <img class="img-responsive"
+              src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667091255/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_pwmu2l.jpg"
+              alt="June Champion" />
+          </div>
+          <div class='col-md-8'>
+            <div class='vcenter-container'>
+              <div class='vcenter-child'>
+                <h2>
+                  Congratulations to
+                  <strong>John Chin!</strong>
+                  <br>
+                </h2>
+                <h3>
+                  Winner of the June 22
+                  <br>
+                  Bay State Open!
                   <br>
                   Read about the day in our
                   <a href="pages/newsletter.html">Newsletter</a>
@@ -104,11 +133,11 @@
         <div class='row content'>
           <iframe allowTransparency='true' allowfullscreen='true' frameborder='0' height='170' mozallowfullscreen='true'
             scrolling='no'
-            src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBayStateOpen%2Fvideos%2F4884896868264915%2F&amp;show_text=0&amp;width=300'
+            src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBayStateOpen%2Fvideos%2F1223244728445213%2F&amp;show_text=0&amp;width=300'
             style='border:none;overflow:hidden' webkitallowfullscreen='true' width='300'></iframe>
           <p>
-            <a href="https://www.facebook.com/BayStateOpen/videos/4884896868264915/">Bay State Open Championship Match
-              Feb 2022</a>
+            <a href="https://www.facebook.com/BayStateOpen/videos/1223244728445213/">Bay State Open Championship Match
+              June 2022</a>
             from
             <a href="https://www.facebook.com/BayStateOpen">Bay State Open</a>
           </p>
