--- a/pages/champions.html
+++ b/pages/champions.html
@@ -9,6 +9,9 @@
     content='The Bay State Open aims to provide a fun, competitive, accessible bowling tournament to bowlers of all levels in the southern New England area.'
     name='description'>
   <link rel="stylesheet" media="all" href="../css/main.css" data-turbolinks-track="true" />
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script src="javascript/bootstrap.min.js"></script>
 </head>
 
 <body>
