--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -9,6 +9,9 @@
     content='The Bay State Open aims to provide a fun, competitive, accessible bowling tournament to bowlers of all levels in the southern New England area.'
     name='description'>
   <link rel="stylesheet" media="all" href="../css/main.css" data-turbolinks-track="true" />
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script src="javascript/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -46,7 +49,6 @@
 
     <div class='row'>
       <div class='col-md-8'>
-        <h3 style='color: #FFFFFF;'>Bay State Open Rules and Regulations</h3>
         <img class="img-responsive" src="../images/june_22_newsletter_1.png"
           alt="May 22 newsletter 1" />
         <img class="img-responsive" src="../images/june_22_newsletter_2.png"
@@ -72,11 +74,11 @@
         <div class='row content'>
           <iframe allowTransparency='true' allowfullscreen='true' frameborder='0' height='170' mozallowfullscreen='true'
             scrolling='no'
-            src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBayStateOpen%2Fvideos%2F4884896868264915%2F&amp;show_text=0&amp;width=300'
+            src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBayStateOpen%2Fvideos%2F1223244728445213%2F&amp;show_text=0&amp;width=300'
             style='border:none;overflow:hidden' webkitallowfullscreen='true' width='300'></iframe>
           <p>
-            <a href="https://www.facebook.com/BayStateOpen/videos/4884896868264915/">Bay State Open Championship Match
-              Feb 2022</a>
+            <a href="https://www.facebook.com/BayStateOpen/videos/1223244728445213/">Bay State Open Championship Match
+              June 2022</a>
             from
             <a href="https://www.facebook.com/BayStateOpen">Bay State Open</a>
           </p>
