--- a/pages/champions.html
+++ b/pages/champions.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" media="all" href="../css/main.css" data-turbolinks-track="true" />
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-  <script src="javascript/bootstrap.min.js"></script>
+  <script src="../javascript/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -50,6 +50,18 @@
     <div class='row'>
       <div class='col-md-8'>
         <div class='row champions'>
+          <div class='row'>
+            <div class='col-md-4'>
+              <img class="img-responsive"
+                src="http://res.cloudinary.com/bay-state-open/image/upload/v1667091255/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_pwmu2l.jpg"
+                alt="Jw2ut7sstijncqredmjh" />
+              <div class='champion-info text-center'>
+                <div class='semibold'>John Chin</div>
+                <div class='light'>Bowlero Lowell</div>
+                <div class='light'>June 12, 2022</div>
+              </div>
+            </div>
+          </div>
           <div class='row'>
             <div class='col-md-4'>
               <img class="img-responsive"
