--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" media="all" href="../css/main.css" data-turbolinks-track="true" />
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-  <script src="javascript/bootstrap.min.js"></script>
+  <script src="../javascript/bootstrap.min.js"></script>
 </head>
 
 <body>
