better papa chin pic

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class='row content'>
           <div class='col-md-4'>
             <img class="img-responsive"
-              src="http://res.cloudinary.com/bay-state-open/image/upload/v1667091255/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_pwmu2l.jpg"
+              src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667092967/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_t2cqc7.jpg"
               alt="June Champion" />
           </div>
           <div class='col-md-8'>
