--- a/pages/champions.html
+++ b/pages/champions.html
@@ -53,7 +53,7 @@
           <div class='row'>
             <div class='col-md-4'>
               <img class="img-responsive"
-                src="http://res.cloudinary.com/bay-state-open/image/upload/v1667091255/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_pwmu2l.jpg"
+                src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667092967/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_t2cqc7.jpg"
                 alt="Jw2ut7sstijncqredmjh" />
               <div class='champion-info text-center'>
                 <div class='semibold'>John Chin</div>
