Jan event post-update

--- a/index.html
+++ b/index.html
@@ -53,53 +53,27 @@
       <div class='col-md-8'>
         <div class='row content'>
           <h2><a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSfmoichiSWcjxgb8nvnla-PB8710iRevma0kXQO-G_LtBWpNA/viewform?usp=sf_link">Please
-              pre-register here for the January 14-15th masters</a></h2>
+              href="https://docs.google.com/forms/d/e/1FAIpQLScHGRKhUeQkwBmAeOO1qLoeSFojadCKtsS4g9H5mpB9aAkkxA/viewform?usp=sf_link">Please
+              pre-register here for the July 8-9th masters</a></h2>
         </div>
         <div class='row content'>
           <div class='col-md-4'>
             <img class="img-responsive"
-              src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1635171124/aq4b52parwugpj68asl2.png"
-              alt="Bowler of the Year" />
+              src="https://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667092967/331103547_192417576754445_567794672519458197_n_zhbxdi.jpg"
+              alt="January Champion" />
           </div>
           <div class='col-md-8'>
             <div class='vcenter-container'>
               <div class='vcenter-child'>
                 <h2>
                   Congratulations to
-                  <strong>Jon Sample!</strong>
+                  <strong>Nathan Nichols!</strong>
                   <br>
                 </h2>
                 <h3>
-                  The 2021-22 Bay State Open
+                  Winner of the January 2023
                   <br>
-                  Bowler of the Year!
-                  <br>
-                  Great bowling Jon!
-                </h3>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class='row content'>
-          <div class='col-md-4'>
-            <img class="img-responsive"
-              src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667092967/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_t2cqc7.jpg"
-              alt="June Champion" />
-          </div>
-          <div class='col-md-8'>
-            <div class='vcenter-container'>
-              <div class='vcenter-child'>
-                <h2>
-                  Congratulations to
-                  <strong>John Chin!</strong>
-                  <br>
-                </h2>
-                <h3>
-                  Winner of the June 12th
-                  <br>
-                  Bay State Open!
+                  Bay State Open Masters!
                   <br>
                   Read about the day in our
                   <a href="pages/newsletter.html">Newsletter</a>
@@ -109,8 +83,8 @@
           </div>
         </div>
         <div class='row content'>
-          <img class="img-responsive" src="images/jan_23_flyer.jpeg"
-            alt="Jan 23 Flyer" />
+          <img class="img-responsive" src="images/july_23_flyer.jpeg"
+            alt="July 23 Flyer" />
         </div>
 
       </div>
@@ -126,8 +100,8 @@
           <a href="https://crosscountrymortgage.com/Peabody-MA-4822/Gary-Girolamo/"><img class="img-responsive"
               src="images/gary_girolamo_logo.png" alt="Gary girolamo logo" />
           </a><br>
-          <a href="http://brunswickbowling.com/"><img class="img-responsive"
-              src="images/brunswick_logo.jpg" alt="Brunswick logo" />
+          <a href="https://www.davintechgroup.com/"><img class="img-responsive"
+              src="images/davin_tech.png" alt="Davin Tech Group logo" />
           </a>
         </div>
         <div class='row content'>
