--- a/pages/about.html
+++ b/pages/about.html
@@ -83,8 +83,8 @@
           <a href="https://crosscountrymortgage.com/Peabody-MA-4822/Gary-Girolamo/"><img class="img-responsive"
               src="../images/gary_girolamo_logo.png" alt="Gary girolamo logo" />
           </a><br>
-          <a href="http://brunswickbowling.com/"><img class="img-responsive" src="../images/brunswick_logo.jpg"
-              alt="Brunswick logo" />
+          <a href="https://www.davintechgroup.com/"><img class="img-responsive" src="../images/davin_tech.png"
+              alt="Davin Tech Group logo" />
           </a>
         </div>
         <div class='row content'>
