--- a/pages/champions.html
+++ b/pages/champions.html
@@ -53,6 +53,16 @@
           <div class='row'>
             <div class='col-md-4'>
               <img class="img-responsive"
+                src="https://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667092967/331103547_192417576754445_567794672519458197_n_zhbxdi.jpg"
+                alt="Jw2ut7sstijncqredmjh" />
+              <div class='champion-info text-center'>
+                <div class='semibold'>Nathan Nichols</div>
+                <div class='light'>Walnut Hill Bowl</div>
+                <div class='light'>Jan 14-15, 2023</div>
+              </div>
+            </div>
+            <div class='col-md-4'>
+              <img class="img-responsive"
                 src="http://res.cloudinary.com/bay-state-open/image/upload/a_exif,c_fill,h_264,q_90,w_208/v1667092967/C4B8EC3C-9574-4D1D-917C-863E9AF88CC0_1_105_c_t2cqc7.jpg"
                 alt="Jw2ut7sstijncqredmjh" />
               <div class='champion-info text-center'>
