--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -50,7 +50,7 @@
     <div class='row'>
       <div class='col-md-8'>
         <div class='row content'>
-          <h3>2021-22 Regular Season Schedule</h3>
+          <h3>2022-23 Masters Season Schedule</h3>
           <table class='table-striped'>
             <tr>
               <th>Date</th>
@@ -62,6 +62,12 @@
               <td>January 14-15th, 2023</td>
               <td>Walnut Hill Bowl</td>
               <td>1666 Diamond Hill Rd, Woonsocket, RI</td>
+              <td>Nathan Nichols</td>
+            </tr>
+            <tr>
+              <td>July 8-9th, 2023</td>
+              <td>Gardner Ten Pin</td>
+              <td>560 W Broadway, Gardner, MA</td>
               <td></td>
             </tr>
             </tr>
@@ -81,8 +87,8 @@
           <a href="https://crosscountrymortgage.com/Peabody-MA-4822/Gary-Girolamo/"><img class="img-responsive"
               src="../images/gary_girolamo_logo.png" alt="Gary girolamo logo" />
           </a><br>
-          <a href="http://brunswickbowling.com/"><img class="img-responsive" src="../images/brunswick_logo.jpg"
-              alt="Brunswick logo" />
+          <a href="https://www.davintechgroup.com/"><img class="img-responsive" src="../images/davin_tech.png"
+              alt="Davin Tech Group logo" />
           </a>
         </div>
         <div class='row content'>
