new dates update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class='row content'>
           <h2><a
               href="https://docs.google.com/forms/d/e/1FAIpQLScHGRKhUeQkwBmAeOO1qLoeSFojadCKtsS4g9H5mpB9aAkkxA/viewform?usp=sf_link">Please
-              pre-register here for the July 8-9th masters</a></h2>
+              pre-register here for the July 7-8th masters</a></h2>
         </div>
         <div class='row content'>
           <div class='col-md-4'>
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class='row content'>
-          <img class="img-responsive" src="images/july_23_flyer.jpeg"
+          <img class="img-responsive" src="images/july_23_flyer_new.jpeg"
             alt="July 23 Flyer" />
         </div>
 
